<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".trainConstructor.ui.TrainConstructorFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trainNameLayout"
        style="@style/EditTextLayoutWithHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:id="@+id/trainName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/train_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trainDateLayout"
        style="@style/EditTextLayoutWithHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconDrawable="@drawable/calendar_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PickHolderTextView"
            android:id="@+id/trainDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/train_date_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addExercise"
        style="@style/DefaultButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_exercise_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainDateLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercisesList"
        style="@style/DefaultRecyclerViewStyle"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addTrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExercise" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTrain"
        style="@style/DefaultButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_train_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>