<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/aboutActivityButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTrainButton"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceImage"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTrainButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_train"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainsList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trainsList"
            style="@style/DefaultRecyclerViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainsLabel" />

        <TextView
            android:id="@+id/trainsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trains_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearanceOverlay="@style/ShapeAppearanceImage"
            android:id="@+id/leaderBoardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTrainButton"
            tools:src="@tools:sample/avatars" />

        <androidx.recyclerview.widget.RecyclerView
            style="@style/DefaultRecyclerViewStyle"
            android:id="@+id/jogsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jogsLabel" />

        <TextView
            android:id="@+id/jogsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jogs_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutActivityButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addJogButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_jog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jogsList" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>