<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jogs.ui.jogConstrcutor.JogFragment">


    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayoutWithHintDark"
            android:id="@+id/jogNameLayout"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jog_name_hint">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/point_target_ic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/popPoint"
                style="@style/DefaultButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/save"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:text="@string/pop_point_text"
                android:textColor="@color/error_color"
                app:layout_constraintBottom_toTopOf="@id/addPoint"
                app:layout_constraintEnd_toEndOf="@+id/addPoint"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/addPoint" />

            <Button
                android:id="@+id/addPoint"
                style="@style/DefaultButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/add_point_text"
                android:textColor="@color/health_green"
                app:layout_constraintBottom_toBottomOf="@+id/save"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/save"
                style="@style/DefaultButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:text="@string/save_train_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addPoint"
                app:layout_constraintStart_toEndOf="@+id/rangeCounter" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rangeCounter"
                style="@style/ListEmptyWarningStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/save"
                tools:text="24 км" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.yandex.mapkit.mapview.MapView>

</androidx.constraintlayout.widget.ConstraintLayout>